[ThinSensors] corrected a figure caption (with extrapolation to smaller pixels)

--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -771,10 +771,9 @@ pitch~\cite{Arai:2011ara} are therefore required.
     \caption{}
   \end{subfigure}
   \caption{(a) Cluster-size distribution and (b) hit residuals,
-    comparing the hit and the MC truth position, in x-direction for
-    the extrapolation of the simulation to small pixel sizes with a
-    $50\,\micron$ thick sensor and a threshold of $\sim~500$
-    electrons.}
+    comparing the hit and the MC truth position, for the extrapolation
+    of the simulation to small pixel sizes with a $50\,\micron$ thick
+    sensor and a threshold of $\sim~500$ electrons.}
   \label{fig:cluSize25Pitch}
 \end{figure}
 
