--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -773,7 +773,8 @@ pitch~\cite{Arai:2011ara} are therefore required.
   \caption{(a) Cluster-size distribution and (b) hit residuals,
     comparing the hit and the MC truth position, for the extrapolation
     of the simulation to small pixel sizes with a $50\,\micron$ thick
-    sensor and a threshold of $\sim~500$ electrons.}
+    sensor and a threshold of $\sim~500$ electrons. Binary readout
+    refers to the geometric resolution of pitch/$\sqrt{12}$.}
   \label{fig:cluSize25Pitch}
 \end{figure}
 
