--- a/thesis_acknowledge.tex
+++ b/thesis_acknowledge.tex
@@ -54,9 +54,9 @@ I would like to thank my friends with whom I have shared great
 memorable moments and I could count on them for any kind of
 support. My friends from Lausanne whom I met during my studies at EPFL
 and we shared many years on the university benches and now we share so
-many great events: Charlotte, Chloé, Christophe, Coralie, Lara, Mina,
-Salim and Sebastien. And to my friends I have met at CERN: Elena,
-Enrico, Luca, Milena and Myriam.
+many great events: Charlotte, Chloé, Christophe, Coralie, Mina, Salim
+and Sebastien. And to my friends I have met at CERN: Elena, Enrico,
+Luca, Milena and Myriam.
 
 Finally, I would like to thank my amazing family: my parents,
 Mahmanzar and Behzad, for their unconditional love and support
