--- a/presentation/presentations.tex
+++ b/presentation/presentations.tex
@@ -82,7 +82,8 @@
 %   %there must be an empty line above this line - otherwise some unwanted space is added between the university and the country (I do not know why;( )
 % }
 
-\date{\today}
+\date{March 13, 2017 \\
+  ETH Zurich, Switzerland}
 
 %-------------------------------------------------------
 % THE BODY OF THE PRESENTATION
